Add PG Diploma duration and autonomous car development experience

--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
 
         <div class="about-card glass">
           <p>
-            I'm a Software & AI Developer from India with a Post Graduate Diploma
-            in Artificial Intelligence & Machine Learning. My last full-time role was
-            onsite in Munich, Germany, working for a reputed automotive company.
+            I'm a Software & AI Developer from India with a One Year Post Graduate
+            Diploma in Artificial Intelligence & Machine Learning. My last full-time
+            role was onsite in Munich, Germany, working for a reputed automotive company
+            where I contributed to autonomous car development.
           </p>
           <p>
             I specialize in building AI agents, agentic AI systems, and AI integrations
