--- a/index.html
+++ b/index.html
@@ -99,49 +99,51 @@
 
       <div class="skills-grid">
         <div class="skill-category glass fade-in">
-          <h3>Frontend</h3>
+          <h3>AI & ML</h3>
           <div class="skill-tags">
-            <span class="skill-tag">HTML5</span>
-            <span class="skill-tag">CSS3</span>
-            <span class="skill-tag">JavaScript</span>
-            <span class="skill-tag">TypeScript</span>
-            <span class="skill-tag">React</span>
-            <span class="skill-tag">Vue.js</span>
-            <span class="skill-tag">Tailwind CSS</span>
+            <span class="skill-tag">LangChain</span>
+            <span class="skill-tag">LangGraph</span>
+            <span class="skill-tag">OpenAI API</span>
+            <span class="skill-tag">RAG Systems</span>
+            <span class="skill-tag">AI Agents</span>
+            <span class="skill-tag">Agentic AI</span>
+            <span class="skill-tag">Prompt Engineering</span>
+            <span class="skill-tag">Vector Databases</span>
           </div>
         </div>
 
         <div class="skill-category glass fade-in">
-          <h3>Backend</h3>
+          <h3>Backend & APIs</h3>
           <div class="skill-tags">
+            <span class="skill-tag">Python</span>
+            <span class="skill-tag">FastAPI</span>
             <span class="skill-tag">Node.js</span>
             <span class="skill-tag">Express</span>
-            <span class="skill-tag">Python</span>
-            <span class="skill-tag">Django</span>
             <span class="skill-tag">REST APIs</span>
-            <span class="skill-tag">GraphQL</span>
+            <span class="skill-tag">WebSockets</span>
           </div>
         </div>
 
         <div class="skill-category glass fade-in">
-          <h3>Databases</h3>
+          <h3>Frontend</h3>
+          <div class="skill-tags">
+            <span class="skill-tag">React</span>
+            <span class="skill-tag">TypeScript</span>
+            <span class="skill-tag">Tailwind CSS</span>
+            <span class="skill-tag">Next.js</span>
+            <span class="skill-tag">JavaScript</span>
+          </div>
+        </div>
+
+        <div class="skill-category glass fade-in">
+          <h3>Databases & Infra</h3>
           <div class="skill-tags">
             <span class="skill-tag">PostgreSQL</span>
-            <span class="skill-tag">MongoDB</span>
+            <span class="skill-tag">Supabase</span>
+            <span class="skill-tag">Pinecone</span>
             <span class="skill-tag">Redis</span>
-            <span class="skill-tag">Firebase</span>
-          </div>
-        </div>
-
-        <div class="skill-category glass fade-in">
-          <h3>Tools & DevOps</h3>
-          <div class="skill-tags">
-            <span class="skill-tag">Git</span>
             <span class="skill-tag">Docker</span>
-            <span class="skill-tag">CI/CD</span>
             <span class="skill-tag">AWS</span>
-            <span class="skill-tag">Linux</span>
-            <span class="skill-tag">Figma</span>
           </div>
         </div>
       </div>
