Add DocuMind and LeadQualifier project cards with live URLs
Replace placeholder project cards with real apps:
- DocuMind (RAG Document Q&A) → documind.sachinmalusare.online
- LeadQualifier (AI Lead Bot) → leadqualifier.sachinmalusare.online
- Update Coming Soon card with relevant description

--- a/index.html
+++ b/index.html
@@ -158,52 +158,57 @@
 
       <div class="projects-grid">
 
-        <!-- Project Card 1 -->
-        <a href="projects/demo-1/index.html" class="project-card glass fade-in">
+        <!-- DocuMind -->
+        <a href="https://documind.sachinmalusare.online" target="_blank" rel="noopener noreferrer" class="project-card glass fade-in">
           <div class="project-thumbnail">
             <div class="placeholder-content">
-              <div class="coming-soon-icon">&#128640;</div>
-              <span>Demo 1 Preview</span>
+              <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5" style="color: var(--accent); margin-bottom: 8px;">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25m5.231 13.481L15 17.25m-4.5-15H5.625c-.621 0-1.125.504-1.125 1.125v16.5c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9zm3.75 11.625a2.625 2.625 0 11-5.25 0 2.625 2.625 0 015.25 0z" />
+              </svg>
+              <span>DocuMind</span>
             </div>
           </div>
           <div class="project-body">
-            <h3 class="project-title">Task Manager App</h3>
+            <h3 class="project-title">DocuMind — AI Document Q&A</h3>
             <p class="project-desc">
-              A sleek drag-and-drop task management board with categories,
-              priorities, and local storage persistence.
+              RAG-powered document assistant that lets you upload PDFs, Word docs, and text files, then ask natural-language questions and get accurate, source-cited answers from your documents.
             </p>
             <div class="project-tech">
-              <span>HTML</span>
-              <span>CSS</span>
-              <span>JavaScript</span>
+              <span>React</span>
+              <span>FastAPI</span>
+              <span>RAG</span>
+              <span>OpenAI</span>
+              <span>Pinecone</span>
             </div>
             <div class="project-links">
-              <span>Open Demo &rarr;</span>
+              <span>Open App &rarr;</span>
             </div>
           </div>
         </a>
 
-        <!-- Project Card 2 -->
-        <a href="projects/demo-2/index.html" class="project-card glass fade-in">
+        <!-- LeadQualifier -->
+        <a href="https://leadqualifier.sachinmalusare.online" target="_blank" rel="noopener noreferrer" class="project-card glass fade-in">
           <div class="project-thumbnail">
             <div class="placeholder-content">
-              <div class="coming-soon-icon">&#127759;</div>
-              <span>Demo 2 Preview</span>
+              <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5" style="color: var(--accent); margin-bottom: 8px;">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M20.25 8.511c.884.284 1.5 1.128 1.5 2.097v4.286c0 1.136-.847 2.1-1.98 2.193-.34.027-.68.052-1.02.072v3.091l-3-3c-1.354 0-2.694-.055-4.02-.163a2.115 2.115 0 01-.825-.242m9.345-8.334a2.126 2.126 0 00-.476-.095 48.64 48.64 0 00-8.048 0c-1.131.094-1.976 1.057-1.976 2.192v4.286c0 .837.46 1.58 1.155 1.951m9.345-8.334V6.637c0-1.621-1.152-3.026-2.76-3.235A48.455 48.455 0 0011.25 3c-2.115 0-4.198.137-6.24.402-1.608.209-2.76 1.614-2.76 3.235v6.226c0 1.621 1.152 3.026 2.76 3.235.577.075 1.157.14 1.74.194V21l4.155-4.155" />
+              </svg>
+              <span>LeadQualifier</span>
             </div>
           </div>
           <div class="project-body">
-            <h3 class="project-title">Weather Dashboard</h3>
+            <h3 class="project-title">LeadQualifier — AI Lead Bot</h3>
             <p class="project-desc">
-              A weather dashboard with location search, 5-day forecast,
-              and beautiful dynamic backgrounds based on conditions.
+              Multi-channel AI lead qualification bot with a real-time dashboard. Automatically engages visitors, qualifies leads with intelligent conversation, and hands off to human reps with full context.
             </p>
             <div class="project-tech">
-              <span>HTML</span>
-              <span>CSS</span>
-              <span>API</span>
+              <span>React</span>
+              <span>FastAPI</span>
+              <span>WebSocket</span>
+              <span>AI Agents</span>
             </div>
             <div class="project-links">
-              <span>Open Demo &rarr;</span>
+              <span>Open App &rarr;</span>
             </div>
           </div>
         </a>
@@ -212,18 +217,19 @@
         <div class="project-card glass fade-in" style="cursor: default; opacity: 0.5;">
           <div class="project-thumbnail">
             <div class="placeholder-content">
-              <div class="coming-soon-icon">&#128295;</div>
+              <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5" style="color: var(--text-muted); margin-bottom: 8px;">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M11.42 15.17l-5.1-5.1m0 0L11.42 4.97m-5.1 5.1H22.5M4.5 19.5h15a2.25 2.25 0 002.25-2.25V6.75A2.25 2.25 0 0019.5 4.5h-15A2.25 2.25 0 002.25 6.75v10.5A2.25 2.25 0 004.5 19.5z" />
+              </svg>
               <span>Coming Soon</span>
             </div>
           </div>
           <div class="project-body">
             <h3 class="project-title">More Projects Coming</h3>
             <p class="project-desc">
-              New demo projects are added regularly. Check back soon
-              for more interactive web applications.
+              More AI-powered applications are on the way — from CRM agents and booking bots to data analysis tools and multi-agent systems.
             </p>
             <div class="project-tech">
-              <span>TBD</span>
+              <span>Coming Soon</span>
             </div>
           </div>
         </div>
