Add guide pages for DocuMind and LeadQualifier
- Create guides/documind.html with architecture, 6-step testing walkthrough, features
- Create guides/leadqualifier.html with two-part walkthrough (customer + sales rep), demo accounts
- Create css/guide.css with step cards, flow diagrams, feature grids, try-it boxes
- Update project cards to link to guide pages with deployment stack pills

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       <div class="projects-grid">
 
         <!-- DocuMind -->
-        <a href="https://documind.sachinmalusare.online" target="_blank" rel="noopener noreferrer" class="project-card glass fade-in">
+        <a href="guides/documind.html" class="project-card glass fade-in">
           <div class="project-thumbnail">
             <div class="placeholder-content">
               <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5" style="color: var(--accent); margin-bottom: 8px;">
@@ -179,15 +179,17 @@
               <span>RAG</span>
               <span>OpenAI</span>
               <span>Pinecone</span>
+              <span>Ubuntu VPS</span>
+              <span>Nginx</span>
             </div>
             <div class="project-links">
-              <span>Open App &rarr;</span>
+              <span>View Guide &rarr;</span>
             </div>
           </div>
         </a>
 
         <!-- LeadQualifier -->
-        <a href="https://leadqualifier.sachinmalusare.online" target="_blank" rel="noopener noreferrer" class="project-card glass fade-in">
+        <a href="guides/leadqualifier.html" class="project-card glass fade-in">
           <div class="project-thumbnail">
             <div class="placeholder-content">
               <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5" style="color: var(--accent); margin-bottom: 8px;">
@@ -206,9 +208,10 @@
               <span>FastAPI</span>
               <span>WebSocket</span>
               <span>AI Agents</span>
+              <span>Railway</span>
             </div>
             <div class="project-links">
-              <span>Open App &rarr;</span>
+              <span>View Guide &rarr;</span>
             </div>
           </div>
         </a>
