--- a/index.html
+++ b/index.html
@@ -62,12 +62,7 @@
 
       <div class="about-grid fade-in">
         <div class="about-image-wrapper">
-          <div class="about-image-placeholder">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.5 20.25a8.25 8.25 0 0115 0" />
-            </svg>
-            <p>Your Photo</p>
-          </div>
+          <img src="images/profile.png" alt="Sachin Malusare" class="about-image" />
         </div>
 
         <div class="about-card glass">
