--- a/index.html
+++ b/index.html
@@ -211,6 +211,35 @@
           </div>
         </a>
 
+        <!-- MetricMind -->
+        <a href="guides/metricmind.html" class="project-card glass fade-in">
+          <div class="project-thumbnail">
+            <div class="placeholder-content">
+              <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5" style="color: var(--accent); margin-bottom: 8px;">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M3 13.125C3 12.504 3.504 12 4.125 12h2.25c.621 0 1.125.504 1.125 1.125v6.75C7.5 20.496 6.996 21 6.375 21h-2.25A1.125 1.125 0 013 19.875v-6.75zM9.75 8.625c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125v11.25c0 .621-.504 1.125-1.125 1.125h-2.25a1.125 1.125 0 01-1.125-1.125V8.625zM16.5 4.125c0-.621.504-1.125 1.125-1.125h2.25C20.496 3 21 3.504 21 4.125v15.75c0 .621-.504 1.125-1.125 1.125h-2.25a1.125 1.125 0 01-1.125-1.125V4.125z" />
+              </svg>
+              <span>MetricMind</span>
+            </div>
+          </div>
+          <div class="project-body">
+            <h3 class="project-title">MetricMind — Data & Metrics Assistant</h3>
+            <p class="project-desc">
+              Upload spreadsheets and data reports, ask questions about your numbers in plain English, and get AI-generated charts and insights with auto-selected visualizations.
+            </p>
+            <div class="project-tech">
+              <span>React</span>
+              <span>FastAPI</span>
+              <span>DuckDB</span>
+              <span>Gemini</span>
+              <span>Recharts</span>
+              <span>Docker</span>
+            </div>
+            <div class="project-links">
+              <span>View Guide &rarr;</span>
+            </div>
+          </div>
+        </a>
+
         <!-- Coming Soon Card -->
         <div class="project-card glass fade-in" style="cursor: default; opacity: 0.5;">
           <div class="project-thumbnail">
