Add interactive operations mock dashboard for client check-ins
Standalone HTML page at /mockdashboard with 5 tabs:
- Try API: upload files, run match queries, health checks
- Run Tests: animated pytest suite with coverage
- Logs: live request logs streamed from API interactions
- Monitoring: real-time health, request counts, error rates
- API Costs: per-service token/call tracking

Banner added to homepage linking to the dashboard.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
     </div>
   </nav>
 
+  <!-- ===== CLIENT DASHBOARD BANNER ===== -->
+  <div style="background: linear-gradient(90deg, rgba(0,212,255,0.08), rgba(0,212,255,0.03)); border-bottom: 1px solid rgba(0,212,255,0.15); padding: 12px 32px; display: flex; align-items: center; justify-content: center; gap: 12px; flex-wrap: wrap;">
+    <span style="font-size: 0.8rem; color: var(--text-secondary);">Every project includes a live operations dashboard for mid-project check-ins — test the API, run tests, view logs, monitor health &amp; API costs.</span>
+    <a href="mockdashboard.html" style="font-size: 0.8rem; font-weight: 600; color: var(--accent); text-decoration: none; border: 1px solid rgba(0,212,255,0.3); padding: 4px 14px; border-radius: 20px; white-space: nowrap; transition: background 0.2s;" onmouseover="this.style.background='rgba(0,212,255,0.08)'" onmouseout="this.style.background='transparent'">Try Mock Dashboard &rarr;</a>
+  </div>
+
   <!-- ===== HERO ===== -->
   <section class="hero" id="hero">
     <div class="hero-bg"></div>
