Update dashboard title and header to mock dashboard for client check-ins

--- a/mockdashboard.html
+++ b/mockdashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Operations Dashboard — Resume Matching Engine</title>
+  <title>Mock Dashboard — Mid-Project Status Checks for Clients</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet" />
@@ -291,8 +291,8 @@
 
   <header class="dash-header">
     <div class="dash-header-left">
-      <div class="dash-logo">Ops <span>Dashboard</span></div>
-      <span class="dash-badge">Resume Matching Engine</span>
+      <div class="dash-logo">Mock <span>Dashboard</span></div>
+      <span class="dash-badge">Mid-Project Client Check-ins</span>
     </div>
     <div class="dash-header-right">
       <div class="live-dot"></div>
