Add Open Graph meta tags for correct link preview on Upwork

--- a/mockdashboard.html
+++ b/mockdashboard.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mock Dashboard — Mid-Project Status Checks for Clients</title>
+  <meta name="description" content="Interactive mock dashboard for mid-project client check-ins. Test the API, run tests, view logs, monitor system health, and track API costs." />
+  <meta property="og:title" content="Mock Dashboard — Mid-Project Status Checks for Clients" />
+  <meta property="og:description" content="Interactive mock dashboard for mid-project client check-ins. Test the API, run tests, view logs, monitor system health, and track API costs." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://sachinmalusare.online/mockdashboard.html" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet" />
